--- a/.aws/config
+++ b/.aws/config
@@ -5,3 +5,6 @@ mfa_serial = arn:aws:iam::842521264722:mfa/null
 source_profile = token
 region = ap-southeast-2
 role_arn = arn:aws:iam::842521264722:role/disasterarea-admin
+
+[profile test]
+region = ap-southeast-2
