--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,8 +15,8 @@ if-shell 'test $(uname -s) = Darwin' 'source ~/.tmux-darwin.conf'
 ######################
 
 # panes
-set -g pane-border-fg black
-set -g pane-active-border-fg brightred
+set -g pane-border-style fg=black
+set -g pane-active-border-style fg=brightred
 
 ## Status bar design
 # status line
@@ -26,14 +26,14 @@ set -g status-fg colour12
 set -g status-interval 10
 
 # messaging
-set -g message-fg black
-set -g message-bg yellow
-set -g message-command-fg blue
-set -g message-command-bg black
+set -g message-style fg=black
+set -g message-style bg=yellow
+set -g message-command-style fg=blue
+set -g message-command-style bg=black
 
 #window mode
-setw -g mode-bg colour6
-setw -g mode-fg colour0
+setw -g mode-style bg=colour6
+setw -g mode-style fg=colour0
 
 # window status
 setw -g window-status-format " #F#I:#W#F "
@@ -68,10 +68,10 @@ setw -g mode-bg colour238
 # }
 # The panes {
 
-set -g pane-border-bg colour235
-set -g pane-border-fg colour238
-set -g pane-active-border-bg colour236
-set -g pane-active-border-fg colour51
+set -g pane-border-style bg=colour235
+set -g pane-border-style fg=colour238
+set -g pane-active-border-style bg=colour236
+set -g pane-active-border-style fg=colour51
 
 # }
 # The statusbar {
